Fix navbar logo alignment

--- a/qtify/src/components/Navbar/Navbar.css
+++ b/qtify/src/components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
 .navbar{
     height: 74px;
-  background-color: var(--color-green); /* 👈 green background */
+  background-color: var(--color-green); 
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 32px;
+  padding-left: 24px;
 }
